# crypto-detecter

./: README.md  pyproject.toml
src/cryptocontainer_lab/: __init__.py
src/cryptocontainer_lab.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/cryptocontainer_lab/cli/: __init__.py  main.py
src/cryptocontainer_lab/context/: collector.py  timeline.py
src/cryptocontainer_lab/core/: io.py  logging_utils.py  models.py  pipeline.py  plugins.py
src/cryptocontainer_lab/crack/: interface.py
src/cryptocontainer_lab/detector/: heuristics.py  scanner.py  signatures.py
src/cryptocontainer_lab/gui/: __init__.py  __main__.py  app.py  case_view.py  log_view.py  main_window.py
src/cryptocontainer_lab/memory/: scanner.py
src/cryptocontainer_lab/recover/: headers.py
src/cryptocontainer_lab/report/: builder.py  formats.py
src/cryptocontainer_lab/unlock/: bitlocker.py  common.py  luks.py  veracrypt.py
